--- a/index.html
+++ b/index.html
@@ -33,7 +33,7 @@
         </a>
       </button>
 
-      <button class="overlay__btn overlay__btn--colors">
+      <button id="contactBtn" class="overlay__btn overlay__btn--colors">
         <span>Contact me</span>
       </button>
     </div>
