--- a/index.html
+++ b/index.html
@@ -25,12 +25,12 @@
   <div class="overlay__inner">
     <!-- Title -->
     <h1 class="overlay__title">
-      Hey, welcome to
+      Welcome to
       <span class="text-gradient">JListen</span>!
     </h1>
     <!-- Description -->
     <p class="overlay__description">
-      <strong>Music collector, producer and product marketer.</strong>
+      <strong>I'm a Product Marketing Specialist and Music Collector.</strong>
     </p>
     <!-- Buttons -->
     <div class="overlay__btns">
