--- a/index.html
+++ b/index.html
@@ -2,6 +2,7 @@
 <html lang="en" >
 <head>
   <meta charset="UTF-8">
+  <meta name="viewport" content="width=device-width, initial-scale=1">
   <title>JListen website</title>
   <link rel="stylesheet" href="./style.css">
   <link rel="icon" type="image/x-icon" href="Zebra_icon.png">
