--- a/index.html
+++ b/index.html
@@ -49,8 +49,5 @@
     </div>
   </div>
 </div>
-<!-- partial -->
-  <script type="module" src="./script.js"></script>
-
-</body>
+<!-- partial -->  <script src="https://cdn.jsdelivr.net/npm/pixi.js@8.4.1/dist/pixi.min.js"></script>  <script src="./script.js"></script></body>
 </html>
